fixed portfolio mobile spacing issue

--- a/src/components/Home/Portfolio/Portfolio.scss
+++ b/src/components/Home/Portfolio/Portfolio.scss
@@ -1,5 +1,7 @@
 .nji-main .nji-portfolio {
-  margin-bottom: 20px;
+  .MuiGrid-item {
+    margin-bottom: 30px;
+  }
 
   .MuiTypography-h5 {
     color: #DE7C79;
